

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-Sep-2012 Rouven Weßling
 ^ [#29048] Update Joomla 3.0 to Bootstrap 2.1 LESS, CSS & JS

03-Sep-2012 Rouven Weßling
 ^ Merge latest platform (c15b8db512c26b6e5308b157c518702d617e47a4)

02-Sept-2012 Jean-Marie Simonet
 # Correcting en-GB.xml to reflect adding protostar and isis + mod_stats_admin ini files

01-Sep-2012 Rouven Weßling
 - Removed the bluestork admin template.
 - Removed the atomic template.
 - Removed the beez5 template.
 ^ Handle removed templates in the sample data. Thanks Elin.
 ^ Normalise all CSS files based on our own lessphp based compiler.
 # [#29026] Update Hathor Less files to use Bootstrap variable names and mixins. Thanks Michael.
 # [#28964] Update jQuery to 1.8.1 and jQuery UI to 1.8.23

01-Sept-2012 Jean-Marie Simonet
 # [#29034] img border is deprecated in html4, obsolete in html5.Thanks Chris
 # [#29027] Add language data to Smart Search indexing's tokenize process. Thanks Michael.
 # [#28756] Enable Search Term Logging in Smart Search. Thanks Michael.
 # [#27933] Smart Search module does not read static filter setting from module parameters. Thanks Chris
 # [#29028] Finder log messages showing on save. Thanks Elin
 ^ [#28833] Unprotect a number of extensions. Thanks Rouven.

30-Aug-2012 Rouven Weßling
 ^ Move JEditor to the CMS libraries.
 # [#29010] Fix E_NOTICE in JFormFieldMedia

29-Aug-2012 Jean-Marie Simonet
 # [#28980] Publication information should not have h2 styling. Thanks Elin
 + [#28975] Add background color selector to protostar. Thanks Elin
 # [#29014] *Firefox 14.0.1: Insert Image, Article or Pagebreak always inserts on top